# strava

./: .flake8  Makefile  README.md  pyproject.toml
src/scripts/: weekly.py
src/strava/: client.py  util.py
